Ensure that we reset auto-increment cache if we have to do an UPDATE becasue of REPLACE This fixes bug #11080: Multi-row REPLACE fails on a duplicate key error

mysql-test/r/auto_increment.result:
  New tests for auto-increment and replace
mysql-test/r/innodb.result:
  New tests for auto-increment and replace
mysql-test/t/auto_increment.test:
  New tests for auto-increment and replace
mysql-test/t/innodb.test:
  New tests for auto-increment and replace
mysys/my_alloc.c:
  More comments